Change in-code macro names

--- a/driver/platform/config_cmake.h.in
+++ b/driver/platform/config_cmake.h.in
@@ -10,8 +10,8 @@
 #define SYSTEM_STRING "@CMAKE_SYSTEM@"
 #define ODBC_PROVIDER "@ODBC_PROVIDER@"
 
-#define CH_ODBC_DEFAULT_DSN_ANSI "@CH_ODBC_DEFAULT_DSN_ANSI@"
-#define CH_ODBC_DEFAULT_DSN_UNICODE "@CH_ODBC_DEFAULT_DSN_UNICODE@"
+#define DSN_DEFAULT_ANSI "@CH_ODBC_DEFAULT_DSN_ANSI@"
+#define DSN_DEFAULT_UNICODE "@CH_ODBC_DEFAULT_DSN_UNICODE@"
 
 #cmakedefine01 USE_SSL
 
