Initialize TEST_DSN and TEST_DSN_W only if empty

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,8 +132,13 @@ if (CH_ODBC_ENABLE_TESTING)
     enable_testing ()
     include (GoogleTest)
 
-    set (TEST_DSN "${CH_ODBC_DEFAULT_DSN_ANSI}")
-    set (TEST_DSN_W "${CH_ODBC_DEFAULT_DSN_UNICODE}")
+    if (NOT TEST_DSN)
+        set (TEST_DSN "${CH_ODBC_DEFAULT_DSN_ANSI}")
+    endif ()
+
+    if (NOT TEST_DSN_W)
+        set (TEST_DSN_W "${CH_ODBC_DEFAULT_DSN_UNICODE}")
+    endif ()
 endif ()
 
 foreach (config ${CMAKE_CONFIGURATION_TYPES_UC})
