Use single quotes for quoting

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -75,32 +75,32 @@ if(TEST_DSN)
             ("${ODBC_PROVIDER}" STREQUAL "UnixODBC" AND PERL_USES_UNIXODBC) OR
             ("${ODBC_PROVIDER}" STREQUAL "iODBC" AND PERL_USES_IODBC)
     ))
-        add_test(NAME "test.pl-a-a" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl "${TEST_DSN}" a)
-        add_test(NAME "test.pl-w-a" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl "${TEST_DSN}" w)
+        add_test(NAME "test.pl-a-a" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl '${TEST_DSN}' a)
+        add_test(NAME "test.pl-w-a" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl '${TEST_DSN}' w)
     endif()
     if(PYTHON AND (
             ("${ODBC_PROVIDER}" STREQUAL "MDAC" AND PYTHON_USES_MDAC) OR
             ("${ODBC_PROVIDER}" STREQUAL "UnixODBC" AND PYTHON_USES_UNIXODBC) OR
             ("${ODBC_PROVIDER}" STREQUAL "iODBC" AND PYTHON_USES_IODBC)
     ))
-        add_test(NAME "test.py-a-a" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN}" a)
-        add_test(NAME "test.py-w-a" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN}" w)
+        add_test(NAME "test.py-a-a" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py '${TEST_DSN}' a)
+        add_test(NAME "test.py-w-a" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py '${TEST_DSN}' w)
     endif()
     if(ODBC_UNIXODBC_ISQL AND "${ODBC_PROVIDER}" STREQUAL "UnixODBC")
-        add_test(NAME "isql-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_UNIXODBC_ISQL} \"${TEST_DSN}\" | grep ${SQL_ANSWER}")
-        add_test(NAME "test.sh-isql-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_UNIXODBC_ISQL} "${TEST_DSN}" -v -b)
+        add_test(NAME "isql-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_UNIXODBC_ISQL} '${TEST_DSN}' | grep ${SQL_ANSWER}")
+        add_test(NAME "test.sh-isql-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_UNIXODBC_ISQL} '${TEST_DSN}' -v -b)
     endif()
     if(ODBC_UNIXODBC_IUSQL AND "${ODBC_PROVIDER}" STREQUAL "UnixODBC")
-        add_test(NAME "iusql-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_UNIXODBC_IUSQL} \"${TEST_DSN}\" | grep ${SQL_ANSWER}")
-        add_test(NAME "test.sh-iusql-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_UNIXODBC_IUSQL} "${TEST_DSN}" -v -b)
+        add_test(NAME "iusql-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_UNIXODBC_IUSQL} '${TEST_DSN}' | grep ${SQL_ANSWER}")
+        add_test(NAME "test.sh-iusql-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_UNIXODBC_IUSQL} '${TEST_DSN}' -v -b)
     endif()
     if(ODBC_IODBC_IODBCTEST AND "${ODBC_PROVIDER}" STREQUAL "iODBC")
-        add_test(NAME "iodbctest-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_IODBC_IODBCTEST} \"DSN=${TEST_DSN}\" | grep ${SQL_ANSWER}")
-        add_test(NAME "test.sh-iodbctest-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_IODBC_IODBCTEST} "DSN=${TEST_DSN}")
+        add_test(NAME "iodbctest-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_IODBC_IODBCTEST} 'DSN=${TEST_DSN}' | grep ${SQL_ANSWER}")
+        add_test(NAME "test.sh-iodbctest-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_IODBC_IODBCTEST} 'DSN=${TEST_DSN}')
     endif()
     if(ODBC_IODBC_IODBCTESTW AND "${ODBC_PROVIDER}" STREQUAL "iODBC")
-        add_test(NAME "iodbctestw-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_IODBC_IODBCTESTW} \"DSN=${TEST_DSN}\" | grep ${SQL_ANSWER}")
-        add_test(NAME "test.sh-iodbctestw-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_IODBC_IODBCTESTW} "DSN=${TEST_DSN}")
+        add_test(NAME "iodbctestw-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_IODBC_IODBCTESTW} 'DSN=${TEST_DSN}' | grep ${SQL_ANSWER}")
+        add_test(NAME "test.sh-iodbctestw-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_IODBC_IODBCTESTW} 'DSN=${TEST_DSN}')
     endif()
 endif()
 
@@ -110,32 +110,32 @@ if(TEST_DSN_W)
             ("${ODBC_PROVIDER}" STREQUAL "UnixODBC" AND PERL_USES_UNIXODBC) OR
             ("${ODBC_PROVIDER}" STREQUAL "iODBC" AND PERL_USES_IODBC)
     ))
-        add_test(NAME "test.pl-a-w" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl "${TEST_DSN_W}" a)
-        add_test(NAME "test.pl-w-w" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl "${TEST_DSN_W}" w)
+        add_test(NAME "test.pl-a-w" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl '${TEST_DSN_W}' a)
+        add_test(NAME "test.pl-w-w" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl '${TEST_DSN_W}' w)
     endif()
     if(PYTHON AND (
             ("${ODBC_PROVIDER}" STREQUAL "MDAC" AND PYTHON_USES_MDAC) OR
             ("${ODBC_PROVIDER}" STREQUAL "UnixODBC" AND PYTHON_USES_UNIXODBC) OR
             ("${ODBC_PROVIDER}" STREQUAL "iODBC" AND PYTHON_USES_IODBC)
     ))
-        add_test(NAME "test.py-a-w" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN_W}" a)
-        add_test(NAME "test.py-w-w" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN_W}" w)
+        add_test(NAME "test.py-a-w" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py '${TEST_DSN_W}' a)
+        add_test(NAME "test.py-w-w" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py '${TEST_DSN_W}' w)
     endif()
     if(ODBC_UNIXODBC_ISQL AND "${ODBC_PROVIDER}" STREQUAL "UnixODBC")
-        add_test(NAME "isql-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_UNIXODBC_ISQL} \"${TEST_DSN_W}\" | grep ${SQL_ANSWER}")
-        add_test(NAME "test.sh-isql-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_UNIXODBC_ISQL} "${TEST_DSN_W}" -v -b)
+        add_test(NAME "isql-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_UNIXODBC_ISQL} '${TEST_DSN_W}' | grep ${SQL_ANSWER}")
+        add_test(NAME "test.sh-isql-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_UNIXODBC_ISQL} '${TEST_DSN_W}' -v -b)
     endif()
     if(ODBC_UNIXODBC_IUSQL AND "${ODBC_PROVIDER}" STREQUAL "UnixODBC")
-        add_test(NAME "iusql-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_UNIXODBC_IUSQL} \"${TEST_DSN_W}\" | grep ${SQL_ANSWER}")
-        add_test(NAME "test.sh-iusql-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_UNIXODBC_IUSQL} "${TEST_DSN_W}" -v -b)
+        add_test(NAME "iusql-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_UNIXODBC_IUSQL} '${TEST_DSN_W}' | grep ${SQL_ANSWER}")
+        add_test(NAME "test.sh-iusql-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_UNIXODBC_IUSQL} '${TEST_DSN_W}' -v -b)
     endif()
     if(ODBC_IODBC_IODBCTEST AND "${ODBC_PROVIDER}" STREQUAL "iODBC")
-        add_test(NAME "iodbctest-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_IODBC_IODBCTEST} \"DSN=${TEST_DSN_W}\" | grep ${SQL_ANSWER}")
-        add_test(NAME "test.sh-iodbctest-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_IODBC_IODBCTEST} "DSN=${TEST_DSN_W}")
+        add_test(NAME "iodbctest-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_IODBC_IODBCTEST} 'DSN=${TEST_DSN_W}' | grep ${SQL_ANSWER}")
+        add_test(NAME "test.sh-iodbctest-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_IODBC_IODBCTEST} 'DSN=${TEST_DSN_W}')
     endif()
     if(ODBC_IODBC_IODBCTESTW AND "${ODBC_PROVIDER}" STREQUAL "iODBC")
-        add_test(NAME "iodbctestw-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_IODBC_IODBCTESTW} \"DSN=${TEST_DSN_W}\" | grep ${SQL_ANSWER}")
-        add_test(NAME "test.sh-iodbctestw-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_IODBC_IODBCTESTW} "DSN=${TEST_DSN_W}")
+        add_test(NAME "iodbctestw-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_IODBC_IODBCTESTW} 'DSN=${TEST_DSN_W}' | grep ${SQL_ANSWER}")
+        add_test(NAME "test.sh-iodbctestw-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ODBC_IODBC_IODBCTESTW} 'DSN=${TEST_DSN_W}')
     endif()
 endif()
 
