--- a/packaging/clickhouse-odbc.tdc.sample
+++ b/packaging/clickhouse-odbc.tdc.sample
@@ -5,7 +5,7 @@
     <customizations>
         <customization name='CAP_CONNECT_STORED_PROCEDURE' value='no' />
         <customization name='CAP_QUERY_GROUP_BY_ALIAS' value='no' />
-        <customization name='CAP_QUERY_GROUP_BY_DEGREE' value='no' />
+        <customization name='CAP_QUERY_INOUT_JOINS' value='no' />
         <customization name='CAP_QUERY_JOIN_PUSH_DOWN_CONDITION_EXPRESSIONS' value='yes' />
         <customization name='CAP_QUERY_JOIN_REQUIRES_SUBQUERY' value='yes' />
         <customization name='CAP_QUERY_SORT_BY_DEGREE' value='no' />
