New README.md Remove obsolete MACOS.md Add comments/descriptions to CH_ODBC_DEFAULT_DSN_ANSI and CH_ODBC_DEFAULT_DSN_UNICODE Adjust formatting of odbc.ini.sample

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,8 +49,8 @@ cmake_dependent_option (CH_ODBC_PREFER_BUNDLED_NANODBC "Prefer bundled over syst
 option (CH_ODBC_RUNTIME_LINK_STATIC "Link with compiler and language runtime statically" OFF)
 option (CH_ODBC_THIRD_PARTY_LINK_STATIC "Link with third party libraries statically" ON)
 
-set (CH_ODBC_DEFAULT_DSN_ANSI "ClickHouse DSN (ANSI)")
-set (CH_ODBC_DEFAULT_DSN_UNICODE "ClickHouse DSN (Unicode)")
+set (CH_ODBC_DEFAULT_DSN_ANSI "ClickHouse DSN (ANSI)" CACHE STRING "Default ANSI DSN name")
+set (CH_ODBC_DEFAULT_DSN_UNICODE "ClickHouse DSN (Unicode)" CACHE STRING "Default Unicode DSN name")
 
 if (MSVC)
     # This default encoding mode will be overriden by UNICODE, in the corresponding cases.
