--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 find_program(PERL perl)
-find_program(PYTHON python2 python python3)
+find_program(PYTHON2 python2)
+find_program(PYTHON3 python3)
 find_program(SQLCMD sqlcmd)
 
 set(PERL_USES_MDAC 0)
@@ -29,22 +30,45 @@ set(PYTHON_USES_MDAC 0)
 set(PYTHON_USES_UNIXODBC 0)
 set(PYTHON_USES_IODBC 0)
 
-if(PYTHON)
+if(PYTHON2)
     execute_process(
-        COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/detect_driver_manager.py
+        COMMAND ${PYTHON2} ${CMAKE_CURRENT_SOURCE_DIR}/detect_driver_manager.py
         OUTPUT_VARIABLE _python_output
         OUTPUT_STRIP_TRAILING_WHITESPACE
 #       ERROR_QUIET
     )
-    message(STATUS "ODBC Driver Manager used by Python's pyodbc: ${_python_output}")
+    message(STATUS "ODBC Driver Manager used by Python 2's pyodbc: ${_python_output}")
     if(_python_output MATCHES "Microsoft")
-        set(PYTHON_USES_MDAC 1)
+        set(PYTHON2_USES_MDAC 1)
     endif()
     if(_python_output MATCHES "unixODBC")
-        set(PYTHON_USES_UNIXODBC 1)
+        set(PYTHON2_USES_UNIXODBC 1)
     endif()
     if(_python_output MATCHES "iODBC")
-        set(PYTHON_USES_IODBC 1)
+        set(PYTHON2_USES_IODBC 1)
+    endif()
+endif()
+
+set(PYTHON3_USES_MDAC 0)
+set(PYTHON3_USES_UNIXODBC 0)
+set(PYTHON3_USES_IODBC 0)
+
+if(PYTHON3)
+    execute_process(
+        COMMAND ${PYTHON3} ${CMAKE_CURRENT_SOURCE_DIR}/detect_driver_manager.py
+        OUTPUT_VARIABLE _python_output
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+#       ERROR_QUIET
+    )
+    message(STATUS "ODBC Driver Manager used by Python 3's pyodbc: ${_python_output}")
+    if(_python_output MATCHES "Microsoft")
+        set(PYTHON3_USES_MDAC 1)
+    endif()
+    if(_python_output MATCHES "unixODBC")
+        set(PYTHON3_USES_UNIXODBC 1)
+    endif()
+    if(_python_output MATCHES "iODBC")
+        set(PYTHON3_USES_IODBC 1)
     endif()
 endif()
 
@@ -55,10 +79,14 @@ message(STATUS "Testing with:\n\t"
     "PERL_USES_MDAC=${PERL_USES_MDAC}\n\t"
     "PERL_USES_UNIXODBC=${PERL_USES_UNIXODBC}\n\t"
     "PERL_USES_IODBC=${PERL_USES_IODBC}\n\t"
-    "PYTHON=${PYTHON}\n\t"
-    "PYTHON_USES_MDAC=${PYTHON_USES_MDAC}\n\t"
-    "PYTHON_USES_UNIXODBC=${PYTHON_USES_UNIXODBC}\n\t"
-    "PYTHON_USES_IODBC=${PYTHON_USES_IODBC}\n\t"
+    "PYTHON2=${PYTHON2}\n\t"
+    "PYTHON2_USES_MDAC=${PYTHON2_USES_MDAC}\n\t"
+    "PYTHON2_USES_UNIXODBC=${PYTHON2_USES_UNIXODBC}\n\t"
+    "PYTHON2_USES_IODBC=${PYTHON2_USES_IODBC}\n\t"
+    "PYTHON3=${PYTHON3}\n\t"
+    "PYTHON3_USES_MDAC=${PYTHON3_USES_MDAC}\n\t"
+    "PYTHON3_USES_UNIXODBC=${PYTHON3_USES_UNIXODBC}\n\t"
+    "PYTHON3_USES_IODBC=${PYTHON3_USES_IODBC}\n\t"
     "ODBC_UNIXODBC_ISQL=${ODBC_UNIXODBC_ISQL}\n\t"
     "ODBC_UNIXODBC_IUSQL=${ODBC_UNIXODBC_IUSQL}\n\t"
     "ODBC_IODBC_IODBCTEST=${ODBC_IODBC_IODBCTEST}\n\t"
@@ -78,13 +106,21 @@ if(TEST_DSN)
         add_test(NAME "test.pl-a-a" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl "${TEST_DSN}" a)
         add_test(NAME "test.pl-w-a" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl "${TEST_DSN}" w)
     endif()
-    if(PYTHON AND (
-            ("${ODBC_PROVIDER}" STREQUAL "MDAC" AND PYTHON_USES_MDAC) OR
-            ("${ODBC_PROVIDER}" STREQUAL "UnixODBC" AND PYTHON_USES_UNIXODBC) OR
-            ("${ODBC_PROVIDER}" STREQUAL "iODBC" AND PYTHON_USES_IODBC)
+    if(PYTHON2 AND (
+            ("${ODBC_PROVIDER}" STREQUAL "MDAC" AND PYTHON2_USES_MDAC) OR
+            ("${ODBC_PROVIDER}" STREQUAL "UnixODBC" AND PYTHON2_USES_UNIXODBC) OR
+            ("${ODBC_PROVIDER}" STREQUAL "iODBC" AND PYTHON2_USES_IODBC)
     ))
-        add_test(NAME "test.py-a-a" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN}" a)
-        add_test(NAME "test.py-w-a" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN}" w)
+        add_test(NAME "test.py-2-a-a" COMMAND ${PYTHON2} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN}" a)
+        add_test(NAME "test.py-2-w-a" COMMAND ${PYTHON2} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN}" w)
+    endif()
+    if(PYTHON3 AND (
+            ("${ODBC_PROVIDER}" STREQUAL "MDAC" AND PYTHON3_USES_MDAC) OR
+            ("${ODBC_PROVIDER}" STREQUAL "UnixODBC" AND PYTHON3_USES_UNIXODBC) OR
+            ("${ODBC_PROVIDER}" STREQUAL "iODBC" AND PYTHON3_USES_IODBC)
+    ))
+        add_test(NAME "test.py-3-a-a" COMMAND ${PYTHON3} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN}" a)
+        add_test(NAME "test.py-3-w-a" COMMAND ${PYTHON3} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN}" w)
     endif()
     if(ODBC_UNIXODBC_ISQL AND "${ODBC_PROVIDER}" STREQUAL "UnixODBC")
         add_test(NAME "isql-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_UNIXODBC_ISQL} '${TEST_DSN}' | grep ${SQL_ANSWER}")
@@ -113,13 +149,21 @@ if(TEST_DSN_W)
         add_test(NAME "test.pl-a-w" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl "${TEST_DSN_W}" a)
         add_test(NAME "test.pl-w-w" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl "${TEST_DSN_W}" w)
     endif()
-    if(PYTHON AND (
-            ("${ODBC_PROVIDER}" STREQUAL "MDAC" AND PYTHON_USES_MDAC) OR
-            ("${ODBC_PROVIDER}" STREQUAL "UnixODBC" AND PYTHON_USES_UNIXODBC) OR
-            ("${ODBC_PROVIDER}" STREQUAL "iODBC" AND PYTHON_USES_IODBC)
+    if(PYTHON2 AND (
+            ("${ODBC_PROVIDER}" STREQUAL "MDAC" AND PYTHON2_USES_MDAC) OR
+            ("${ODBC_PROVIDER}" STREQUAL "UnixODBC" AND PYTHON2_USES_UNIXODBC) OR
+            ("${ODBC_PROVIDER}" STREQUAL "iODBC" AND PYTHON2_USES_IODBC)
     ))
-        add_test(NAME "test.py-a-w" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN_W}" a)
-        add_test(NAME "test.py-w-w" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN_W}" w)
+        add_test(NAME "test.py-2-a-w" COMMAND ${PYTHON2} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN_W}" a)
+        add_test(NAME "test.py-2-w-w" COMMAND ${PYTHON2} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN_W}" w)
+    endif()
+    if(PYTHON3 AND (
+            ("${ODBC_PROVIDER}" STREQUAL "MDAC" AND PYTHON3_USES_MDAC) OR
+            ("${ODBC_PROVIDER}" STREQUAL "UnixODBC" AND PYTHON3_USES_UNIXODBC) OR
+            ("${ODBC_PROVIDER}" STREQUAL "iODBC" AND PYTHON3_USES_IODBC)
+    ))
+        add_test(NAME "test.py-3-a-w" COMMAND ${PYTHON3} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN_W}" a)
+        add_test(NAME "test.py-3-w-w" COMMAND ${PYTHON3} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN_W}" w)
     endif()
     if(ODBC_UNIXODBC_ISQL AND "${ODBC_PROVIDER}" STREQUAL "UnixODBC")
         add_test(NAME "isql-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_UNIXODBC_ISQL} '${TEST_DSN_W}' | grep ${SQL_ANSWER}")
