--- a/.travis.yml
+++ b/.travis.yml
@@ -287,13 +287,15 @@ before_install: |-
 
 install: |-
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-    sudo apt-get install -y build-essential cmake perl libdbi-perl libdbd-odbc-perl python python-pyodbc
+    sudo apt-get install -y build-essential cmake perl libdbi-perl libdbd-odbc-perl python python2 python-pip python-pyodbc python3 python3-pip python3-pyodbc
+    pip3 install --user testflows
   elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
     brew uninstall --force --ignore-dependencies cmake perl python@2
-    brew install cmake perl python@2
+    brew install cmake perl python@2 python@3
     PERL_MM_USE_DEFAULT=1 cpan -T DBD::ODBC
     if [[ "$ODBC_PROVIDER" == "UnixODBC" ]]; then
-      pip install --user pyodbc
+      pip2 install --user pyodbc
+      pip3 install --user pyodbc testflows
     fi
   elif [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
     export OLD_VSWHERE=yes
