--- a/.travis.yml
+++ b/.travis.yml
@@ -287,7 +287,7 @@ before_install: |-
 
 install: |-
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-    sudo apt-get install -y build-essential cmake perl libdbi-perl libdbd-odbc-perl python python-pip python-pyodbc python3 python3-pip python3-pyodbc
+    sudo apt-get install -y build-essential cmake perl libdbi-perl libdbd-odbc-perl python python-pip python-pyodbc python3 python3-pip python3-pyodbc python3-setuptools
     pip3 install --user testflows
   elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
     brew uninstall --force --ignore-dependencies cmake perl python@2 python@3
