--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -121,7 +121,7 @@ if(TEST_DSN)
     ))
         add_test(NAME "test.py-3-a-a" COMMAND ${PYTHON3} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN}" a)
         add_test(NAME "test.py-3-w-a" COMMAND ${PYTHON3} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN}" w)
-        add_test(NAME "parametrized-regression.py-3-a" COMMAND ${CMAKE_COMMAND} -E env DSN="${TEST_DSN}" ${PYTHON3} ${CMAKE_CURRENT_SOURCE_DIR}/parameterized/regression.py)
+        add_test(NAME "parametrized-regression.py-3-a" COMMAND ${CMAKE_COMMAND} -E env "DSN=${TEST_DSN}" ${PYTHON3} ${CMAKE_CURRENT_SOURCE_DIR}/parameterized/regression.py)
     endif()
     if(ODBC_UNIXODBC_ISQL AND "${ODBC_PROVIDER}" STREQUAL "UnixODBC")
         add_test(NAME "isql-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_UNIXODBC_ISQL} '${TEST_DSN}' | grep ${SQL_ANSWER}")
@@ -165,7 +165,7 @@ if(TEST_DSN_W)
     ))
         add_test(NAME "test.py-3-a-w" COMMAND ${PYTHON3} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN_W}" a)
         add_test(NAME "test.py-3-w-w" COMMAND ${PYTHON3} ${CMAKE_CURRENT_SOURCE_DIR}/test.py "${TEST_DSN_W}" w)
-        add_test(NAME "parametrized-regression.py-3-w" COMMAND ${CMAKE_COMMAND} -E env DSN="${TEST_DSN_W}" ${PYTHON3} ${CMAKE_CURRENT_SOURCE_DIR}/parameterized/regression.py)
+        add_test(NAME "parametrized-regression.py-3-w" COMMAND ${CMAKE_COMMAND} -E env "DSN=${TEST_DSN_W}" ${PYTHON3} ${CMAKE_CURRENT_SOURCE_DIR}/parameterized/regression.py)
     endif()
     if(ODBC_UNIXODBC_ISQL AND "${ODBC_PROVIDER}" STREQUAL "UnixODBC")
         add_test(NAME "isql-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ODBC_UNIXODBC_ISQL} '${TEST_DSN_W}' | grep ${SQL_ANSWER}")
