Add performance unit tests chassis

--- a/driver/test/CMakeLists.txt
+++ b/driver/test/CMakeLists.txt
@@ -17,6 +17,7 @@ function (declare_odbc_test_targets libname UNICODE)
         type_conversion_ut.cpp
         buffer_filling_ut.cpp
         connection_string_ut.cpp
+        performance_ut.cpp
     )
 
     target_link_libraries (${libname}-ut
