Add CH_ODBC_ENABLE_SAFE_DISPATCH_ONLY option and implement optional unchecked dispatch Rename USE_SSL macro to WORKAROUND_ENABLE_SSL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ include(CMakeDependentOption)
 option(BUILD_TESTING "Build test targets" ON)
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 
+option (CH_ODBC_ENABLE_SAFE_DISPATCH_ONLY "Do not allow unchecked handle dispatching (may slightly affect performance)" ON)
 option (CH_ODBC_ENABLE_SSL "Enable SSL (required for utilizing https:// interface, etc.)" ON)
 option (CH_ODBC_ENABLE_INSTALL "Enable install targets (required for packaging)" ON)
 cmake_dependent_option (CH_ODBC_ENABLE_TESTING "Enable test targets" ON "BUILD_TESTING" OFF)
