--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -1,8 +1,8 @@
 function (declare_odbc_lib_targets libname UNICODE)
 
 # See the usage of each workaround in the code, for comments.
-unset (WORKAROUND_ENABLE_SAFE_DISPATCH_ONLY)
-unset (WORKAROUND_ENABLE_SSL)
+unset (WORKAROUND_ALLOW_UNSAFE_DISPATCH)
+unset (WORKAROUND_DISABLE_SSL)
 unset (WORKAROUND_ENABLE_TRIM_TRAILING_NULL)
 unset (WORKAROUND_ENABLE_DEFINE_SQLBindParam)
 unset (WORKAROUND_ENABLE_NO_UNICODE_CHARS_IN_COLUMN_NAMES_IN_TESTS)
@@ -23,12 +23,12 @@ if ("${ODBC_PROVIDER}" STREQUAL "iODBC")
     set (WORKAROUND_ENABLE_NO_UNICODE_CHARS_IN_COLUMN_NAMES_IN_TESTS 1)
 endif ()
 
-if (CH_ODBC_ENABLE_SAFE_DISPATCH_ONLY)
-    set (WORKAROUND_ENABLE_SAFE_DISPATCH_ONLY 1)
+if (CH_ODBC_ALLOW_UNSAFE_DISPATCH)
+    set (WORKAROUND_ALLOW_UNSAFE_DISPATCH 1)
 endif()
 
-if (CH_ODBC_ENABLE_SSL)
-    set (WORKAROUND_ENABLE_SSL 1)
+if (NOT CH_ODBC_ENABLE_SSL)
+    set (WORKAROUND_DISABLE_SSL 1)
 endif()
 
 message (STATUS "${libname}: ${DRIVER_PREFIX}")
@@ -38,8 +38,8 @@ configure_file (
     ${CMAKE_CURRENT_BINARY_DIR}/platform/config_cmake${WIDECHAR_SUFFIX}.h
 )
 
-unset (WORKAROUND_ENABLE_SAFE_DISPATCH_ONLY)
-unset (WORKAROUND_ENABLE_SSL)
+unset (WORKAROUND_ALLOW_UNSAFE_DISPATCH)
+unset (WORKAROUND_DISABLE_SSL)
 unset (WORKAROUND_ENABLE_TRIM_TRAILING_NULL)
 unset (WORKAROUND_ENABLE_DEFINE_SQLBindParam)
 unset (WORKAROUND_ENABLE_NO_UNICODE_CHARS_IN_COLUMN_NAMES_IN_TESTS)
