--- a/driver/platform/config_cmake.h.in
+++ b/driver/platform/config_cmake.h.in
@@ -14,8 +14,8 @@
 #define DSN_DEFAULT_UNICODE "@CH_ODBC_DEFAULT_DSN_UNICODE@"
 
 // See the usage of each workaround in the code, for comments.
-#cmakedefine WORKAROUND_ENABLE_SAFE_DISPATCH_ONLY
-#cmakedefine WORKAROUND_ENABLE_SSL
+#cmakedefine WORKAROUND_ALLOW_UNSAFE_DISPATCH
+#cmakedefine WORKAROUND_DISABLE_SSL
 #cmakedefine WORKAROUND_ENABLE_TRIM_TRAILING_NULL
 #cmakedefine WORKAROUND_ENABLE_DEFINE_SQLBindParam
 #cmakedefine WORKAROUND_ENABLE_NO_UNICODE_CHARS_IN_COLUMN_NAMES_IN_TESTS
