--- a/driver/test/CMakeLists.txt
+++ b/driver/test/CMakeLists.txt
@@ -60,7 +60,7 @@ function (declare_odbc_test_targets libname UNICODE)
         common_utils.h
         client_utils.h
         client_test_base.h
-        ${PROJECT_SOURCE_DIR}/driver/type_info.cpp
+        ${PROJECT_SOURCE_DIR}/driver/utils/type_info.cpp
         ${PROJECT_SOURCE_DIR}/driver/utils/unicode_conv.h
         misc_it.cpp
         statement_parameters_it.cpp
@@ -69,6 +69,7 @@ function (declare_odbc_test_targets libname UNICODE)
 
     target_link_libraries (${libname}-client-it
         PRIVATE ODBC::App
+        PRIVATE Poco::Foundation
         PRIVATE gtest
         PRIVATE gmock
         PRIVATE Threads::Threads
