--- a/.travis.yml
+++ b/.travis.yml
@@ -289,11 +289,10 @@ install: |-
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     sudo apt-get install -y build-essential cmake perl libdbi-perl libdbd-odbc-perl python python-pyodbc
   elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-    brew uninstall --force --ignore-dependencies cmake perl python@2
-    brew install cmake perl python@2
+    brew install cmake perl python
     PERL_MM_USE_DEFAULT=1 cpan -T DBD::ODBC
     if [[ "$ODBC_PROVIDER" == "UnixODBC" ]]; then
-      pip install --user pyodbc
+      pip3 install --user pyodbc
     fi
   elif [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
     export OLD_VSWHERE=yes
