Fix flag setting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,8 @@ endif ()
 # Make sure that all optimized builds have NDEBUG macro set.
 foreach (config Release RelWithDebInfo MinSizeRel)
     foreach (lang CMAKE_C_FLAGS CMAKE_CXX_FLAGS)
-        set (var "${lang}_${config}")
+        string (TOUPPER "${config}" config_uc)
+        set (var "${lang}_${config_uc}")
         set (${var} "${${var}} -DNDEBUG")
     endforeach ()
 endforeach ()
@@ -74,8 +75,9 @@ endforeach ()
 # Set BUILD_TYPE_* macro for each of build types.
 foreach (config Debug Release RelWithDebInfo MinSizeRel)
     foreach (lang CMAKE_C_FLAGS CMAKE_CXX_FLAGS)
-        set (var "${lang}_${config}")
-        set (${var} "${${var}} -DBUILD_TYPE_${config}")
+        string (TOUPPER "${config}" config_uc)
+        set (var "${lang}_${config_uc}")
+        set (${var} "${${var}} -DBUILD_TYPE_${config_uc}")
     endforeach ()
 endforeach ()
 
