Use TEST_DSN_LIST instead of separate TEST_DSN and TEST_DSN_W ("-dsn-{n}" is appended to each test command name) Modify testing to support arbitrary list of DSNs Add a DSN in travis testing config, that access server using RowBinaryWithNamesAndTypes and ANSI driver

--- a/driver/test/CMakeLists.txt
+++ b/driver/test/CMakeLists.txt
@@ -88,13 +88,13 @@ function (declare_odbc_test_targets libname UNICODE)
         )
     endif ()
 
-    if (TEST_DSN)
-        add_test (NAME ${libname}-client-it COMMAND ${libname}-client-it "${TEST_DSN}")
-    endif ()
-
-    if (TEST_DSN_W)
-        add_test (NAME ${libname}-client-it-w COMMAND ${libname}-client-it "${TEST_DSN_W}")
-    endif ()
+    set(test_dsn_counter 0)
+    foreach (test_dsn ${TEST_DSN_LIST})
+        if (test_dsn)
+            add_test (NAME ${libname}-client-it-dsn-${test_dsn_counter} COMMAND ${libname}-client-it "${test_dsn}")
+            math (EXPR test_dsn_counter "${test_dsn_counter}+1")
+        endif ()
+    endforeach ()
 
     if (TARGET nanodbc
 #        AND (
@@ -128,20 +128,20 @@ function (declare_odbc_test_targets libname UNICODE)
             )
         endif ()
 
-        if (TEST_DSN)
-            add_test (NAME ${libname}-${nanoname}-it COMMAND ${libname}-${nanoname}-it "DSN=${TEST_DSN}")
-            if (NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" OR CMAKE_BUILD_TYPE_UC STREQUAL "ASAN" OR CMAKE_BUILD_TYPE_UC STREQUAL "MSAN"))
-                #TODO: add_test (NAME "${libname}-${nanoname}-valgrind-it" COMMAND valgrind -v --leak-check=full --show-leak-kinds=all $<TARGET_FILE:${libname}-${nanoname}-it> "DSN=${TEST_DSN}")
-            endif ()
-        endif ()
+        set(test_dsn_counter 0)
+        foreach (test_dsn ${TEST_DSN_LIST})
+            if (test_dsn)
+                add_test (NAME ${libname}-${nanoname}-it-dsn-${test_dsn_counter} COMMAND ${libname}-${nanoname}-it "DSN=${test_dsn}")
 
-        if (TEST_DSN_W)
-            add_test (NAME ${libname}-${nanoname}-it-w COMMAND ${libname}-${nanoname}-it "DSN=${TEST_DSN_W}")
-            if (NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" OR CMAKE_BUILD_TYPE_UC STREQUAL "ASAN" OR CMAKE_BUILD_TYPE_UC STREQUAL "MSAN"))
-                #TODO: add_test (NAME "${libname}-${nanoname}-valgrind-it-w" COMMAND valgrind -v --leak-check=full --show-leak-kinds=all $<TARGET_FILE:${libname}-${nanoname}-it> "DSN=${TEST_DSN_W}")
+                if (NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" OR CMAKE_BUILD_TYPE_UC STREQUAL "ASAN" OR CMAKE_BUILD_TYPE_UC STREQUAL "MSAN"))
+                    #TODO: add_test (NAME "${libname}-${nanoname}-valgrind-it-dsn-${test_dsn_counter} COMMAND valgrind -v --leak-check=full --show-leak-kinds=all $<TARGET_FILE:${libname}-${nanoname}-it> "DSN=${test_dsn}")
+                endif ()
+
+                # gdb -ex "catch throw" -ex run --args ./clickhouse-odbc-nano DSN=clickhouse_localhost_system
+
+                math (EXPR test_dsn_counter "${test_dsn_counter}+1")
             endif ()
-        endif ()
-        # gdb -ex "catch throw" -ex run --args ./clickhouse-odbc-nano DSN=clickhouse_localhost_system
+        endforeach ()
     endif ()
 endfunction ()
 
