--- a/.travis.yml
+++ b/.travis.yml
@@ -377,6 +377,7 @@ install: |-
   [ODBC Data Sources]
   ClickHouse DSN (ANSI)    = ClickHouse ODBC Driver (ANSI)
   ClickHouse DSN (Unicode) = ClickHouse ODBC Driver (Unicode)
+  ClickHouse DSN (ANSI, RowBinaryWithNamesAndTypes) = ClickHouse ODBC Driver (ANSI)
 
   [ClickHouse DSN (ANSI)]
   Driver        = ClickHouse ODBC Driver (ANSI)
@@ -391,12 +392,19 @@ install: |-
   Url           = http://${CLICKHOUSE_SERVER_IP}
   DriverLog     = yes
   DriverLogFile = ${RUN_DIR}/clickhouse-odbc-driver-w.log
+
+  [ClickHouse DSN (ANSI, RowBinaryWithNamesAndTypes)]
+  Driver        = ClickHouse ODBC Driver (ANSI)
+  Description   = Test DSN for ClickHouse ODBC Driver (ANSI) that uses RowBinaryWithNamesAndTypes as data source communication default format
+  Url           = http://${CLICKHOUSE_SERVER_IP}/query?default_format=RowBinaryWithNamesAndTypes
+  DriverLog     = yes
+  DriverLogFile = ${RUN_DIR}/clickhouse-odbc-driver.log
   EOF
     fi
   fi
 
 .configure: &configure |-
-  CMAKE_CONFIGURE_ARGS="'-DTEST_DSN=ClickHouse DSN (ANSI)' '-DTEST_DSN_W=ClickHouse DSN (Unicode)' $CMAKE_CONFIGURE_EXTRA_ARGS"
+  CMAKE_CONFIGURE_ARGS="'-DTEST_DSN_LIST=\"ClickHouse DSN (ANSI);ClickHouse DSN (Unicode);ClickHouse DSN (ANSI, RowBinaryWithNamesAndTypes)\"' $CMAKE_CONFIGURE_EXTRA_ARGS"
   if [[ "$EXTERNAL_THIRD_PARTY" == "yes" ]]; then
     CMAKE_CONFIGURE_ARGS="-DCH_ODBC_PREFER_BUNDLED_THIRD_PARTIES=OFF $CMAKE_CONFIGURE_ARGS"
   fi
