--- a/.travis.yml
+++ b/.travis.yml
@@ -404,7 +404,7 @@ install: |-
   fi
 
 .configure: &configure |-
-  CMAKE_CONFIGURE_ARGS="'-DTEST_DSN_LIST=\"ClickHouse DSN (ANSI);ClickHouse DSN (Unicode);ClickHouse DSN (ANSI, RowBinaryWithNamesAndTypes)\"' $CMAKE_CONFIGURE_EXTRA_ARGS"
+  CMAKE_CONFIGURE_ARGS="-DTEST_DSN_LIST=\"ClickHouse DSN (ANSI);ClickHouse DSN (Unicode);ClickHouse DSN (ANSI, RowBinaryWithNamesAndTypes)\" $CMAKE_CONFIGURE_EXTRA_ARGS"
   if [[ "$EXTERNAL_THIRD_PARTY" == "yes" ]]; then
     CMAKE_CONFIGURE_ARGS="-DCH_ODBC_PREFER_BUNDLED_THIRD_PARTIES=OFF $CMAKE_CONFIGURE_ARGS"
   fi
@@ -412,10 +412,14 @@ install: |-
     CMAKE_CONFIGURE_ARGS="-DODBC_PROVIDER=$ODBC_PROVIDER $CMAKE_CONFIGURE_ARGS"
   fi
   cd $BUILD_DIR
+  echo "#!/usr/bin/env bash" > cmake_configure.sh
+  echo "set -Eeuo pipefail" >> cmake_configure.sh
+  echo "cmake $CMAKE_CONFIGURE_ARGS $SOURCE_DIR" >> cmake_configure.sh
+  chmod u+x cmake_configure.sh
   if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
-    $SOURCE_DIR/test/vcvars_enabled_bash.sh cmake $CMAKE_CONFIGURE_ARGS $SOURCE_DIR
+    $SOURCE_DIR/test/vcvars_enabled_bash.sh ./cmake_configure.sh
   else
-    cmake $CMAKE_CONFIGURE_ARGS $SOURCE_DIR
+    ./cmake_configure.sh
   fi
 
 .build: &build |-
