--- a/.travis.yml
+++ b/.travis.yml
@@ -375,9 +375,9 @@ install: |-
   DebugFile = ${RUN_DIR}/odbc-driver-manager-debug.log
 
   [ODBC Data Sources]
-  ClickHouse DSN (ANSI)    = ClickHouse ODBC Driver (ANSI)
-  ClickHouse DSN (Unicode) = ClickHouse ODBC Driver (Unicode)
-  ClickHouse DSN (ANSI, RowBinaryWithNamesAndTypes) = ClickHouse ODBC Driver (ANSI)
+  ClickHouse DSN (ANSI)         = ClickHouse ODBC Driver (ANSI)
+  ClickHouse DSN (Unicode)      = ClickHouse ODBC Driver (Unicode)
+  ClickHouse DSN (ANSI, RBWNAT) = ClickHouse ODBC Driver (ANSI)
 
   [ClickHouse DSN (ANSI)]
   Driver        = ClickHouse ODBC Driver (ANSI)
@@ -393,7 +393,7 @@ install: |-
   DriverLog     = yes
   DriverLogFile = ${RUN_DIR}/clickhouse-odbc-driver-w.log
 
-  [ClickHouse DSN (ANSI, RowBinaryWithNamesAndTypes)]
+  [ClickHouse DSN (ANSI, RBWNAT)]
   Driver        = ClickHouse ODBC Driver (ANSI)
   Description   = Test DSN for ClickHouse ODBC Driver (ANSI) that uses RowBinaryWithNamesAndTypes as data source communication default format
   Url           = http://${CLICKHOUSE_SERVER_IP}/query?default_format=RowBinaryWithNamesAndTypes
@@ -404,7 +404,7 @@ install: |-
   fi
 
 .configure: &configure |-
-  CMAKE_CONFIGURE_ARGS="-DTEST_DSN_LIST=\"ClickHouse DSN (ANSI);ClickHouse DSN (Unicode);ClickHouse DSN (ANSI, RowBinaryWithNamesAndTypes)\" $CMAKE_CONFIGURE_EXTRA_ARGS"
+  CMAKE_CONFIGURE_ARGS="-DTEST_DSN_LIST=\"ClickHouse DSN (ANSI);ClickHouse DSN (Unicode);ClickHouse DSN (ANSI, RBWNAT)\" $CMAKE_CONFIGURE_EXTRA_ARGS"
   if [[ "$EXTERNAL_THIRD_PARTY" == "yes" ]]; then
     CMAKE_CONFIGURE_ARGS="-DCH_ODBC_PREFER_BUNDLED_THIRD_PARTIES=OFF $CMAKE_CONFIGURE_ARGS"
   fi
