Add contrib/folly submodule Intergate Folly third-party lib (only bundled, only headers) Use folly::resizeWithoutInitialization() on critical paths

--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -90,6 +90,15 @@ if (MSVC)
     endif ()
 endif ()
 
+# if (CH_ODBC_PREFER_BUNDLED_FOLLY OR NOT Folly_FOUND)
+#     if (NOT Folly_FOUND AND NOT CH_ODBC_PREFER_BUNDLED_FOLLY)
+#         message (WARNING "Folly: unable to find system Folly, falling back to using the bundled variant of the library")
+#     endif ()
+#
+#    add_subdirectory (folly)
+    set (FOLLY_INLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/folly" CACHE INTERNAL "")
+# endif ()
+
 if (CH_ODBC_ENABLE_TESTING)
     if (CH_ODBC_PREFER_BUNDLED_GOOGLETEST OR NOT GTEST_FOUND)
         if (NOT GTEST_FOUND AND NOT CH_ODBC_PREFER_BUNDLED_GOOGLETEST)
