--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -132,6 +132,7 @@ if (UNICODE)
 endif ()
 
 target_include_directories (${libname}-impl
+    PUBLIC ${FOLLY_INLUDE_DIR}      # TODO: switch to linking with folly lib target?
     PUBLIC ${PROJECT_BINARY_DIR}
     PUBLIC ${PROJECT_SOURCE_DIR}
 )
