Use cmake from kitware repo for bionic

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,9 +36,13 @@ jobs:
         - docker
       addons:
         apt:
+          sources:
+            - sourceline: 'deb https://apt.kitware.com/ubuntu/ bionic main'
+              key_url: 'https://apt.kitware.com/keys/kitware-archive-latest.asc'
           packages:
             - gcc
             - g++
+            - cmake
             - unixodbc
             - unixodbc-bin
             - unixodbc-dev
@@ -61,9 +65,13 @@ jobs:
         - docker
       addons:
         apt:
+          sources:
+            - sourceline: 'deb https://apt.kitware.com/ubuntu/ bionic main'
+              key_url: 'https://apt.kitware.com/keys/kitware-archive-latest.asc'
           packages:
             - gcc
             - g++
+            - cmake
             - unixodbc
             - unixodbc-bin
             - unixodbc-dev
@@ -86,9 +94,13 @@ jobs:
         - docker
       addons:
         apt:
+          sources:
+            - sourceline: 'deb https://apt.kitware.com/ubuntu/ bionic main'
+              key_url: 'https://apt.kitware.com/keys/kitware-archive-latest.asc'
           packages:
             - gcc
             - g++
+            - cmake
             - unixodbc
             - unixodbc-bin
             - unixodbc-dev
@@ -111,9 +123,13 @@ jobs:
         - docker
       addons:
         apt:
+          sources:
+            - sourceline: 'deb https://apt.kitware.com/ubuntu/ bionic main'
+              key_url: 'https://apt.kitware.com/keys/kitware-archive-latest.asc'
           packages:
             - gcc
             - g++
+            - cmake
             - openssl
             - libssl-dev
             - libpoco-dev
@@ -140,8 +156,12 @@ jobs:
         - docker
       addons:
         apt:
+          sources:
+            - sourceline: 'deb https://apt.kitware.com/ubuntu/ bionic main'
+              key_url: 'https://apt.kitware.com/keys/kitware-archive-latest.asc'
           packages:
             - clang
+            - cmake
             - unixodbc
             - unixodbc-bin
             - unixodbc-dev
@@ -164,9 +184,13 @@ jobs:
         - docker
       addons:
         apt:
+          sources:
+            - sourceline: 'deb https://apt.kitware.com/ubuntu/ bionic main'
+              key_url: 'https://apt.kitware.com/keys/kitware-archive-latest.asc'
           packages:
             - gcc
             - g++
+            - cmake
             - iodbc
             - libiodbc2
             - libiodbc2-dev
@@ -189,8 +213,12 @@ jobs:
         - docker
       addons:
         apt:
+          sources:
+            - sourceline: 'deb https://apt.kitware.com/ubuntu/ bionic main'
+              key_url: 'https://apt.kitware.com/keys/kitware-archive-latest.asc'
           packages:
             - clang
+            - cmake
             - iodbc
             - libiodbc2
             - libiodbc2-dev
@@ -287,6 +315,7 @@ before_install: |-
 
 install: |-
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+    export PATH=$(echo "$PATH" | sed -e 's|:/usr/local/cmake-[^:]*/bin:|:|')
     sudo apt-get install -y build-essential cmake perl libdbi-perl libdbd-odbc-perl python python-pyodbc
   elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
     # brew install cmake perl python
