--- a/.travis.yml
+++ b/.travis.yml
@@ -252,8 +252,8 @@ jobs:
       addons:
         homebrew:
           packages:
+            - openssl
             - poco
-            - openssl@1.1
             - libiodbc
           update: true
 
@@ -410,6 +410,9 @@ install: |-
   CMAKE_CONFIGURE_ARGS="-DTEST_DSN_LIST=\"ClickHouse DSN (ANSI);ClickHouse DSN (Unicode);ClickHouse DSN (ANSI, RBWNAT)\" $CMAKE_CONFIGURE_EXTRA_ARGS"
   if [[ "$EXTERNAL_THIRD_PARTY" == "yes" ]]; then
     CMAKE_CONFIGURE_ARGS="-DCH_ODBC_PREFER_BUNDLED_THIRD_PARTIES=OFF $CMAKE_CONFIGURE_ARGS"
+    if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+      CMAKE_CONFIGURE_ARGS="-DOPENSSL_ROOT_DIR=$(brew --prefix)/opt/openssl $CMAKE_CONFIGURE_ARGS"
+    fi
   fi
   if [[ ! -z "$ODBC_PROVIDER" ]]; then
     CMAKE_CONFIGURE_ARGS="-DODBC_PROVIDER=$ODBC_PROVIDER $CMAKE_CONFIGURE_ARGS"
