Review static runtime linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,7 @@ foreach (config Debug Release RelWithDebInfo MinSizeRel)
 endforeach ()
 
 if (CH_ODBC_RUNTIME_LINK_STATIC)
-    if (MSVC)
+    if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
         foreach (config ${CMAKE_CONFIGURATION_TYPES_UC})
             foreach (lang CMAKE_C_FLAGS CMAKE_CXX_FLAGS)
                 set (var "${lang}_${config}")
@@ -90,16 +90,20 @@ if (CH_ODBC_RUNTIME_LINK_STATIC)
                 string (REPLACE "-MD" "-MT" ${var} "${${var}}")
             endforeach ()
         endforeach ()
-    endif ()
-
-    if (COMPILER_GCC)
-        set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++")
-        set (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -static-libgcc -static-libstdc++")
-    endif ()
-
-    if (NOT APPLE AND NOT ARCH_FREEBSD AND NOT WIN32)
-        set (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,${FORCE_STATIC_LINK}--whole-archive -static-libgcc -static-libstdc++ -Wl,--no-whole-archive")
-    endif ()
+    elseif (
+        CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR
+        (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND NOT APPLE)
+    )
+        if (NOT APPLE AND NOT WIN32 AND NOT ARCH_FREEBSD)
+            set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--whole-archive -static-libgcc -static-libstdc++ -Wl,--no-whole-archive")
+            set (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--whole-archive -static-libgcc -static-libstdc++ -Wl,--no-whole-archive")
+        else ()
+            set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++")
+            set (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -static-libgcc -static-libstdc++")
+        endif ()
+    else ()
+        message (WARNING "linking with compiler and language runtime statically is not supported in the current build environment")
+    endif()
 endif ()
 
 include (GNUInstallDirs)
@@ -170,7 +174,7 @@ if (ipo_supported)
     if (NOT DEFINED CMAKE_INTERPROCEDURAL_OPTIMIZATION) # respect value prodivided by user
         set (CMAKE_INTERPROCEDURAL_OPTIMIZATION 1)
         set (CMAKE_INTERPROCEDURAL_OPTIMIZATION_DEBUG 0)
-    endif ()    
+    endif ()
 endif ()
 
 add_subdirectory (driver)
